# kavari

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
config/: flake8.cfg
src/kavari/: __init__.py  factory.py  fibonacci_retry_policy.py  kafka_client.py  kafka_consumer_manager.py  kafka_manager.py  kafka_message.py  kafka_message_consumer.py  kafka_message_deserializer.py  retry_policy.py
src/tpkm/: __init__.py  exceptions.py  factory.py  fibonacci_retry_policy.py  kafka_client.py  kafka_consumer_manager.py  kafka_manager.py  kafka_message.py  kafka_message_consumer.py  kafka_message_handler.py  message_type_registry.py  module_globals.py  retry_policy.py  tooling.py
tests/unit/kavari_tests/: test_kafka_consumer_manager.py  test_kafka_manager.py  test_kafka_message_deserializer.py  test_with_kafka.py
tests/unit/tpkm/: test_kafka_consumer_manager.py  test_kafka_manager.py
tests/unit/tpkm_tests/: test_kafka_consumer_manager.py  test_kafka_manager.py
